MIUI西班牙 translations added.

--- a/src/packages/apps/Updater/res/values/strings.xml
+++ b/src/packages/apps/Updater/res/values/strings.xml
@@ -1,112 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-  <string name="app_name">Updater</string>
-  <string name="apply_now_button_text">Update now</string>
-  <string name="view_details">View details</string>
-  <string name="download_whole_rom">Download full ROM <xliff:g id="SIZE">(%s)</xliff:g></string>
-  <string name="download_ota_rom">Download the OTA update <xliff:g id="SIZE">(%s)</xliff:g></string>
-  <string name="apply_later_button_text">Apply later</string>
-  <string name="switch_system">Reboot recovery</string>
-  <string name="start_update">Begin update</string>
-  <string name="applying_update">Applying the update...<xliff:g id="PROGRESS">%s</xliff:g></string>
-  <string name="apply_update_guide">Updating in background, does not affect normal use</string>
-  <string name="apply_update_fail">System update failed</string>
-  <string name="apply_update_refuse">System update is in progress, please reselect and install later</string>
-  <string name="view_install_log">View error log</string>
-  <string name="send_install_log">Send error log</string>
-  <string name="install_email">Install E-mail software</string>
-  <string name="send_install_log_error">Failed to send error log</string>
-  <string name="copy_install_log">Copy to clipboard</string>
-  <string name="reboot_to_new_system">Reboot to new version</string>
-  <string name="update_success">Congratulations, update successfully applied!</string>
-  <string name="mione_update_success_title">Update completed</string>
-  <string name="mione_update_success_description">Switch system</string>
-  <string name="mione_update_fail_title">Update Failed</string>
-  <string name="mione_update_fail_description">Please update again</string>
-  <string name="apply_unable_to_reboot_toast">Unable to reboot to enter recovery</string>
-  <string name="checking_for_updates">Checking for updates...</string>
-  <string name="downloading_description">Downloading...</string>
-  <string name="paused_queued_for_wifi">Waiting for WLAN connection</string>
-  <string name="sdcard_is_not_present_dialog_body">SD card was not mounted or unreadable, please try again</string>
-  <string name="sdcard_is_not_present_dialog_title">SD card not found</string>
-  <string name="sdcard_has_no_space_dialog_body">SD card has insufficient free space, more space is required for this operation</string>
-  <string name="sdcard_has_no_space_dialog_title">SD card low memory</string>
-  <string name="current_version_text">Current version</string>
-  <string name="apply_update_dialog_update_button">Update</string>
-  <string name="apply_update_dialog_cancel_button">Cancel</string>
-  <string name="cancel_download_buton_text">Cancel</string>
-  <string name="confirm_download_cancelation_dialog_message">Are you sure you want to cancel the current download?</string>
-  <string name="dialog_yes">Yes</string>
+  <string name="app_name">Actualizador</string>
+  <string name="apply_now_button_text">Actualizar</string>
+  <string name="view_details">Ver detalles</string>
+  <string name="download_whole_rom">Descargar ROM Completa <xliff:g id="SIZE">(%s)</xliff:g></string>
+  <string name="download_ota_rom"Descargar update OT <xliff:g id="SIZE">(%s)</xliff:g></string>
+  <string name="apply_later_button_text">Aplicar después</string>
+  <string name="switch_system">Reiniciar Recovery</string>
+  <string name="start_update">Iniciar actualización</string>
+  <string name="applying_update">Aplicando la actualización...<xliff:g id="PROGRESS">%s</xliff:g></string>
+  <string name="apply_update_guide">La actualización no afectara el uso normal de su dispositivo</string>
+  <string name="apply_update_fail">Actualización del sistema fallida!</string>
+  <string name="apply_update_refuse">La actualización del sistema está en curso…\n\n¿Desea cancelar la actualización y solicitarla más tarde?</string>
+  <string name="view_install_log">Ver registro de errores</string>
+  <string name="send_install_log">Enviar registro de errores</string>
+  <string name="install_email">Instale software de correo electrónico</string>
+  <string name="send_install_log_error">Error al enviar el registro de errores</string>
+  <string name="copy_install_log">Copiar al portapapeles</string>
+  <string name="reboot_to_new_system">Reiniciar en recovery</string>
+  <string name="update_success">Felicidades, el sistema se actualizo correctamente</string>
+  <string name="mione_update_success_title">La actualización se ha completado</string>
+  <string name="mione_update_success_description">MI-ONE se actualizado correctamente</string>
+  <string name="mione_update_fail_title">Error de la actualización</string>
+  <string name="mione_update_fail_description">La actualización de MI-ONE ha fallado, inténtalo de nuevo</string>
+  <string name="apply_unable_to_reboot_toast">No es posible reiniciar el sistema para entrar en recovery</string>
+  <string name="checking_for_updates">Comprobando actualizaciones...</string>
+  <string name="downloading_description">Descargando...</string>
+  <string name="paused_queued_for_wifi">Esperando por conexión WiFi</string>
+  <string name="sdcard_is_not_present_dialog_body">Tarjeta SD no se monta o es ilegible, inténtalo de nuevo</string>
+  <string name="sdcard_is_not_present_dialog_title">No se encuentra tarjetas SD</string>
+  <string name="sdcard_has_no_space_dialog_body">No tiene suficiente espacio libre en la tarjeta SD, se requiere más espacio para esta operación</string>
+  <string name="sdcard_has_no_space_dialog_title">Poca memoria en la tarjeta SD</string>
+  <string name="current_version_text">Versión actual:\u0020</string>
+  <string name="apply_update_dialog_update_button">Actualizar</string>
+  <string name="apply_update_dialog_cancel_button">Cancelar</string>
+  <string name="cancel_download_buton_text">Cancelar</string>
+  <string name="confirm_download_cancelation_dialog_message">¿Está seguro que desea cancelar la descarga actual?</string>
+  <string name="dialog_yes">Si</string>
   <string name="dialog_no">No</string>
-  <string name="dialog_ok">OK</string>
-  <string name="verify_and_apply_dialog_title">Check file integrity</string>
-  <string name="verify_and_apply_dialog_message">Verifying MD5 checksum...</string>
-  <string name="apply_existing_update_md5error_title">MD5 signature does not match</string>
-  <string name="file_not_found_error_message">Requested file not found on server</string>
-  <string name="apply_upload_info_message_manually">After shutdown, you can manually enter Recovery to apply <xliff:g id="FILE">%s</xliff:g> in SD Card. If you want to backup, you may perform it and then return to system update.</string>
-  <string name="apply_upload_info_message">Clicking "Update now" will automatically restart the phone to apply the update</string>
-  <string name="apply_buddy_update_info_message">Click "Update now", the phone will begin the update process</string>
-  <string name="system_backup_button_text">Perform a system backup before updating</string>
-  <string name="system_backup_cancel_text">Reboot to Update</string>
-  <string name="system_backup_ok_text">Backup</string>
-  <string name="sytemt_backup_helper">System update will not wipe user data. However,it is recommended to make a backup of your user data before updating</string>
-  <string name="system_backup_error_message">MIUI backup was not found, please backup manually</string>
-  <string name="md5_check_cancelled">MD5 check cancelled</string>
-  <string name="no_updatecheck_executed">Update check not performed</string>
-  <string name="no_updates_found">You already have the latest version installed</string>
-  <string name="no_updates_warning">No updates were found for your phone</string>
-  <string name="no_updates_warning2">The application will notify you of any future updates</string>
-  <string name="new_updates_found_title">Updates available</string>
-  <string name="new_update_content_title">New version found</string>
-  <string name="new_update_downloading_body">Downloading new version:<xliff:g id="VERSION">%s</xliff:g></string>
-  <string name="new_update_download_complete_body">New version updatable:<xliff:g id="VERSION">%s</xliff:g></string>
-  <string name="update_success_title">Congratulations,update succeeded</string>
-  <string name="update_success_body">System has been successfully updated to <xliff:g id="VERSION">%s</xliff:g></string>
-  <string name="exception_while_downloading">Error while downloading update</string>
-  <string name="new_updates_found_notification_title">System update has been detected!</string>
-  <string name="network_error">Network connection error has occurred, please try again</string>
-  <string name="monthly_build">Monthly Build</string>
-  <string name="weekly_build">Weekly Build</string>
-  <string name="daily_build">Daily Build</string>
-  <string name="stable_build">Stable Build</string>
-  <string name="about_device">About phone</string>
+  <string name="dialog_ok">Aceptar</string>
+  <string name="verify_and_apply_dialog_title">Comprobar la integridad del archivo</string>
+  <string name="verify_and_apply_dialog_message">Verificando MD5 checksum…</string>
+  <string name="apply_existing_update_md5error_title">La firma MD5 no coincide</string>
+  <string name="file_not_found_error_message">El archivo solicitado no se encuentra en el servidor</string>
+  <string name="apply_upload_info_message_manually">Puede aplicar manualmente la actualización <xliff:g id="FILE">%s</xliff:g> desde la SD. Si desea un Backup, puede realizarla y luego volver a la actualización del sistema.</string>
+  <string name="apply_upload_info_message">Al hacer clic en \"Actualizar\" automáticamente se reiniciará su dispositivo para aplicar la actualización</string>
+  <string name="apply_buddy_update_info_message">Haga clic en \"Actualizar\" y comenzará el proceso de actualización</string>
+  <string name="system_backup_button_text">Realice una copia de seguridad antes de aplicar la actualización</string>
+  <string name="system_backup_cancel_text">Aplicar\nactualización</string>
+  <string name="system_backup_ok_text">Copia de seguridad</string>
+  <string name="sytemt_backup_helper">La actualización no borrará los datos de usuario, sin embargo se recomienda hacer una copia de seguridad de sus datos de usuario antes de actualizar</string>
+  <string name="system_backup_error_message">Backup no se ha encontrado</string>
+  <string name="md5_check_cancelled">Verificación del MD5 cancelado</string>
+  <string name="no_updatecheck_executed">La verificación de la actualización no se realizara</string>
+  <string name="no_updates_found">Ya tiene instalada la última versión</string>
+  <string name="no_updates_warning">No se encontraron actualizaciones para su dispositivo</string>
+  <string name="no_updates_warning2">El actualizador le notificará de cualquiera de las futuras actualizaciones de OTA</string>
+  <string name="new_updates_found_title">Actualizaciones disponibles</string>
+  <string name="new_update_content_title">Nueva versión encontrada:</string>
+  <string name="new_update_downloading_body">Descargando versión:\n%s</string>
+  <string name="new_update_download_complete_body">Verión a instalar:\n%s</string>
+  <string name="update_success_title">Actualizado correctamente</string>
+  <string name="update_success_body">Sistema actualizado a %s</string>
+  <string name="exception_while_downloading">Error durante la descarga de la actualización</string>
+  <string name="new_updates_found_notification_title">Detectada actualización del sistema!</string>
+  <string name="network_error">Se ha producido un error de conexión en la red, inténtalo de nuevo</string>
+  <string name="monthly_build">Versión mensual</string>
+  <string name="weekly_build">Versión semanal</string>
+  <string name="daily_build">Versión diaria</string>
+  <string name="stable_build">Versión estable</string>
+  <string name="about_device">Acerca del teléfono</string>
 
-  <string name="emegency_build">Build:</string>
-  <string name="wifi_not_available_title">WLAN not connected</string>
-  <string name="wifi_not_available_body">It is recommended to use WLAN to download updates as file sizes can be large. you are not currently using WLAN, are you sure to continue?</string>
-  <string name="boot_recovery">Reboot to Recovery</string>
-  <string name="applying_rom_message">Applying update</string>
-  <string name="loading">Requesting</string>
-  <string name="install_rom_from_sd">Select installation pack</string>
-  <string name="download_current_rom">Download latest full ROM</string>
-  <string name="no_proper_updates">No updates were found for the currently installed version</string>
-  <string name="emegency_update_helper">It will require a reboot to apply the update</string>
-  <string name="emegency_update_size">Size: <xliff:g id="SIZE">%s</xliff:g></string>
-  <string name="sign_in_info">"Your update ranking is<xliff:g id="RANK">%1$s</xliff:g>\n<xliff:g id="TOTAL">%2$s</xliff:g> users have signed in for MIUI <xliff:g id="VERSION">%3$s</xliff:g>"</string>
-  <string name="sign_in_info_total_more">"Your update ranking is <xliff:g id="RANK">%1$s</xliff:g>\nOver <xliff:g id="TOTAL">%2$s</xliff:g> users have signed in for MIUI <xliff:g id="VERSION">%3$s</xliff:g>"</string>
-  <string name="sign_in_info_rank_more">"Your update ranking is after <xliff:g id="RANK">%1$s</xliff:g>\nOver <xliff:g id="TOTAL">%2$s</xliff:g> users have signed in for MIUI <xliff:g id="VERSION">%3$s</xliff:g>"</string>
-  <string name="sign_in_add_account_helper">Your phone has no active MIUI account, add one to receive user-points</string>
-  <string name="my_rank">"Update ranking:"</string>
+  <string name="emegency_build">Versión:</string>
+  <string name="wifi_not_available_title">Wi-Fi no detectado!</string>
+  <string name="wifi_not_available_body">Se recomienda el uso de Wi-Fi para descargar las actualizaciones, los tamaños de los archivo pueden ser grandes.\n\nWi-Fi no está actualmente activado…\n\n¿Estás seguro de querer continuar con la descarga?</string>
+  <string name="boot_recovery">Reiniciar en recovery</string>
+  <string name="applying_rom_message">Aplicando actualización</string>
+  <string name="loading">Conectando...</string>
+  <string name="install_rom_from_sd">Instalar desde la tarjeta SD</string>
+  <string name="download_current_rom">Descargar ROM completa de Miui China</string>
+  <string name="no_proper_updates">No hay cambios encontrados en la versión actualmente instalada</string>
+  <string name="emegency_update_helper">Se requiere entrar en el recovery para aplicar la actualización</string>
+  <string name="emegency_update_size">Tamaño: <xliff:g id="SIZE">%s</xliff:g></string>
+  <string name="sign_in_info">"Su ranking actualizado es <xliff:g id="RANK">%1$s</xliff:g>\n<xliff:g id="TOTAL">%2$s</xliff:g> usuarios se han registrado en MIUI <xliff:g id="VERSION">%3$s</xliff:g>"</string>
+  <string name="sign_in_info_total_more">"Su ranking actualizado es <xliff:g id="RANK">%1$s</xliff:g>\nOver <xliff:g id="TOTAL">%2$s</xliff:g> usuarios se han registrado en MIUI <xliff:g id="VERSION">%3$s</xliff:g>"</string>
+  <string name="sign_in_info_rank_more">"Su ranking actualizado después de <xliff:g id="RANK">%1$s</xliff:g>\nOver <xliff:g id="TOTAL">%2$s</xliff:g> usuarios se han registrado en MIUI <xliff:g id="VERSION">%3$s</xliff:g>"</string>
+  <string name="sign_in_add_account_helper">El teléfono no tiene una cuenta MIUI vinculada o activada para recibir puntos de usuario</string>
+  <string name="my_rank">Ranking:</string>
 
-  <string name="move_data_to_sdcard_title">Move data to SD card</string>
-  <string name="move_data_to_sdcard_not_enough_space_message">Not enough space on SD card to move the selected <xliff:g id="SIZE">%d</xliff:g>MB of data</string>
-  <string name="moving_data_to_sdcard_message">Data is being transferred to SD card, please don\'t turn on the USB mode or remove SD card.</string>
-  <string name="moving_data_to_sdcard_progress_format">Transferred <xliff:g id="PROGRESS">%1$d</xliff:g>dKb of <xliff:g id="TOTAL">%2$d</xliff:g>Kb</string>
-  <string name="finish_download">Download completed</string>
-  <string name="install_whole_rom">Download full ROM package is recommended</string>
-  <string name="check_update_policy">Check update settings</string>
-  <string name="check_update_when_wifi_available">Check for updates only using WLAN</string>
-  <string name="update_monthly_build_only">Update to Monthly build only</string>
-  <string name="install_file_explorer">please install file explorer</string>
+  <string name="move_data_to_sdcard_title">Mover los datos a la tarjeta SD</string>
+  <string name="move_data_to_sdcard_not_enough_space_message">No hay suficiente espacio en la SD para mover los datos seleccionados <xliff:g id="SIZE">%d</xliff:g>MB of data</string>
+  <string name="moving_data_to_sdcard_message">Los datos se están transfiriendo a la SD, no active el modo USB o quite la tarjeta SD..</string>
+  <string name="moving_data_to_sdcard_progress_format">Transferido <xliff:g id="PROGRESS">%1$d</xliff:g>dKb de <xliff:g id="TOTAL">%2$d</xliff:g>Kb</string>
+  <string name="finish_download">Descarga completada</string>
+  <string name="install_whole_rom">Descargue paquete de la ROM completa, recomendada</string>
+  <string name="check_update_policy">Ajustes del actualizador</string>
+  <string name="check_update_when_wifi_available">Buscar actualizaciones sólo con Wi-Fi</string>
+  <string name="update_monthly_build_only">Actualizar sólo a versión mensual</string>
+  <string name="install_file_explorer">Instale el explorador de archivos</string>
 
-  <string name="share_update">Share system update info</string>
-  <string name="share_update_content_unsign">I’ve updated MIUI to <xliff:g id="VERSION">%1$s</xliff:g>! For detailed changelog, please visit "<xliff:g id="CHANGELOG">%2$s</xliff:g>"</string>
-  <string name="share_update_content_sign">I’ve updated MIUI to <xliff:g id="VERSION">%1$s</xliff:g>! My update user rank is <xliff:g id="RANK">%2$s</xliff:g>. For detailed changelog, please visit "<xliff:g id="CHANGELOG">%3$s</xliff:g>"</string>
-  <string name="share_sina">Post it via Sina weibo</string>
-  <string name="share_qq">Post it via Tencent weibo</string>
-  <string name="upgrade_kernel">Current kernel version need upgrade</string>
-  <string name="upgrade_kernel_msg">"Current kernel version doesn't match the MIUI ROM.You need upgrade the kernel manually.Please refer to upgrade tutorial:\r\n"</string>
-  <string name="view_upgrade_tutorial">View tutorial</string>
-  <string name="upgrade_close">Close</string>
+  <string name="share_update">Compartir información de sistema</string>
+  <string name="share_update_content_unsign">He actualizado MIUI a %s! Para la lista detallada de cambios, visita http://www.miui.com</string>
+  <string name="share_update_content_sign">He actualizado MIUI a %1$s! Mi ranking de actualización es %2$s. Para la lista detallada de cambios, visita http://www.miui.com</string>
+  <string name="share_sina">Postear via Sina</string>
+  <string name="share_qq">Postear via Tencent</string>
+  <string name="upgrade_kernel">El kernel actual necesita ser actualizado</string>
+  <string name="upgrade_kernel_msg">"El kernel actual no coincide con el de MIUI ROM. Necesita actualizar el kernel manualmente. Por favor visita el tutorial para más información: "</string>
+  <string name="view_upgrade_tutorial">Ver tutorial</string>
+  <string name="upgrade_close">Cerrar</string>
 </resources>
