--- a/src/packages/apps/Updater/res/values/strings.xml
+++ b/src/packages/apps/Updater/res/values/strings.xml
@@ -5,7 +5,7 @@
   <string name="apply_now_button_text">Actualizar</string>
   <string name="view_details">Ver detalles</string>
   <string name="download_whole_rom">Descargar ROM Completa <xliff:g id="SIZE">(%s)</xliff:g></string>
-  <string name="download_ota_rom"Descargar update OT <xliff:g id="SIZE">(%s)</xliff:g></string>
+  <string name="download_ota_rom">Descargar update OTA <xliff:g id="SIZE">(%s)</xliff:g></string>
   <string name="apply_later_button_text">Aplicar después</string>
   <string name="switch_system">Reiniciar Recovery</string>
   <string name="start_update">Iniciar actualización</string>
