MIUI西班牙 translations added.

--- a/src/packages/apps/Weather/res/values/strings.xml
+++ b/src/packages/apps/Weather/res/values/strings.xml
@@ -1,108 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">天气</string>
-    <string name="app_w_1x4">天气 1x4</string>
-    <string name="app_w_1x4_color">天气 1x4</string>
-    <string name="app_w_2x4">天气 2x4</string>
-    <string name="app_ok">确定</string>
-    <string name="app_exit">取消</string>
-    <string name="app_del">删除</string>
-    <string name="app_on">开启</string>
-    <string name="app_off">关闭</string>
-    <string name="app_def_city">北京</string>
+    <string name="app_name">Miui Weather</string>
+    <string name="app_w_1x4">Weather 1x4</string>
+    <string name="app_w_1x4_color">Weather 1x4</string>
+    <string name="app_w_2x4">Weather 2x4</string>
+    <string name="app_ok">Aceptar</string>
+    <string name="app_exit">Salir</string>
+    <string name="app_del">Eliminar</string>
+    <string name="app_on">On</string>
+    <string name="app_off">Off</string>
+    <string name="app_def_city">Newcastle</string>
 
-    <string name="app_upgradeTitle">软件升级</string>
-    <string name="app_upgradeDetail">修复某些情况下时间不更新的问题。</string>
-    <string name="app_upgradeYes">现在升级</string>
-    <string name="app_upgradeNo">下次再说</string>
-    <string name="app_upgradeDownloading">正在下载中</string>
-    <string name="app_upgradeFailed">下载失败，以后会再通知您升级</string>
+    <string name="app_upgradeTitle">Actualización</string>
+    <string name="app_upgradeDetail">"1. Corregir ubicación 2.Fix recordatorios pop-up"</string>
+    <string name="app_upgradeYes">Actualizar ahora</string>
+    <string name="app_upgradeNo">Actualizar despues</string>
+    <string name="app_upgradeDownloading">Descargando actualización...</string>
+    <string name="app_upgradeFailed">Fallo la instalación de actualizaciones!</string>
 
     <string name="app_about_1">v4.0.1</string>
-    <string name="app_about_2">Copyright © 2012 miui.com, All Rights Reserved</string>
+    <string name="app_about_2">Copyright © 2012 miui.com, Todos los derechos reservados</string>
 
-    <string name="app_weather_friend_1">开启当前位置提醒</string>
-    <string name="app_weather_friend_2">雨,雪,降温等突发天气时通知</string>
-    <string name="app_weather_friend_title_1">转发天气给亲友</string>
-    <string name="app_weather_friend_title_2">将今日天气通过短信或电话转给联系人</string>
-    <string name="app_weather_friend_btn">添加联系人</string>
-    <string name="app_weather_friend_delete_title">删除联系人</string>
+    <string name="app_weather_friend_1">Compartir Tiempo</string>
+    <string name="app_weather_friend_2">Enviar informe del tiempo a sus amigo(s)</string>
+    <string name="app_weather_friend_title_1">Adelante el tiempo a un amigo</string>
+    <string name="app_weather_friend_title_2">El tiempo de hoy será transferido vía SMS.</string>
+    <string name="app_weather_friend_btn">Añadir contacto</string>
+    <string name="app_weather_friend_delete_title">Eliminar contacto</string>
 
-    <string name="app_love_title">亲情天气提醒</string>
-    <string name="app_love_send_title">发送给..</string>
-    <string name="app_love_add_btn">添加联系人</string>
-    <string name="app_love_sms_title">短信内容</string>
-    <string name="app_love_view_title">预览</string>
-    <string name="app_love_next_btn">下一步</string>
-    <string name="app_love_back_btn">返回</string>
+    <string name="app_love_title">Enviar informe del clima vía SMS</string>
+    <string name="app_love_send_title">Enviando...</string>
+    <string name="app_love_add_btn">Añadir contacto</string>
+    <string name="app_love_sms_title">Contenido de los mensajes</string>
+    <string name="app_love_view_title">Vista previa</string>
+    <string name="app_love_next_btn">Siguiente</string>
+    <string name="app_love_back_btn">Anterior</string>
     <string name="app_love_font_lng">%s</string>
 
 
-    <string name="app_nohave_net">无网络连接，请检查网络</string>
-    <string name="app_unquiet_net">网络不稳定，请稍候重试</string>
-    <string name="app_no_sktq">暂无实况</string>
+    <string name="app_nohave_net">No funciona la conexion de red!</string>
+    <string name="app_unquiet_net">La red no está disponible, por favor inténtalo de nuevo</string>
+    <string name="app_no_sktq">No hay datos</string>
 
-    <string name="widget_loading">暂无天气信息</string>
+    <string name="widget_loading">No hay información sobre el clima</string>
 
-    <string name="act_find_city_hot_title">热门城市</string>
-    <string name="act_find_city_title">添加位置</string>
-    <string name="act_find_city_null_data">没有你要查询的地区天气</string>
-    <string name="act_find_city_hint">搜索2400个位置(中文/拼音)</string>
+    <string name="act_find_city_hot_title">Ciudades</string>
+    <string name="act_find_city_title">Añadir Ciudad</string>
+    <string name="act_find_city_null_data">No hay información sobre el clima</string>
+    <string name="act_find_city_hint">Buscar tu Ciudad en la base de datos</string>
 
-    <string name="act_set_city_title">编辑位置</string>
-    <string name="act_set_city_find_side_on">开启定位</string>
-    <string name="act_set_city_find_side">定位中...</string>
-    <string name="act_set_city_find_side_error">定位失败</string>
-    <string name="act_set_city_delete_title">删除位置</string>
-    <string name="act_set_city_delete_city">你确定要删除 %s 吗？</string>
+    <string name="act_set_city_title">Editar ubicación</string>
+    <string name="act_set_city_find_side_on">Activar GPS</string>
+    <string name="act_set_city_find_side">Localizando...</string>
+    <string name="act_set_city_find_side_error">No se pudo ubicar!</string>
+    <string name="act_set_city_delete_title">Eliminar ubicación</string>
+    <string name="act_set_city_delete_city">Está seguro que desea eliminar %s?</string>
 
-    <string name="act_weather_main_net_error">网络错误,请重试</string>
-    <string name="act_weather_main_data_null">暂无当天详情\n点击刷新</string>
+    <string name="act_weather_main_net_error">Error en la red, por favor, inténtelo de nuevo.</string>
+    <string name="act_weather_main_data_null">"No hay datos meteorológicos. Haga clic en Actualizar para intentar de nuevo."</string>
 
-    <string name="act_weather_cycle_add_city">保存位置</string>
-    <string name="act_weather_cycle_update">更新中...</string>
-    <string name="act_weather_update_time">发布时间:%s</string>
-    <string name="act_weather_cycle_offreport">无</string>
+    <string name="act_weather_cycle_add_city">Guardar</string>
+    <string name="act_weather_cycle_update">Actualizando...</string>
+    <string name="act_weather_update_time">Actualizar: %s</string>
+    <string name="act_weather_cycle_offreport">Off</string>
 
-    <string name="act_weather_range_title">周边天气</string>
-    <string name="act_weather_range_select">请选择位置</string>
+    <string name="act_weather_range_title">Tiempo local</string>
+    <string name="act_weather_range_select">Seleccionar la ubicación</string>
 
-    <string name="menu_cycle">天气预报</string>
-    <string name="menu_detail">今日详情</string>
-    <string name="menu_range">周边天气</string>
-    <string name="menu_new">编辑位置</string>
-    <string name="menu_reload">刷新</string>
-    <string name="menu_report_on">展开提醒</string>
-    <string name="menu_report_off">收拢提醒</string>
-    <string name="menu_sms">短信转发</string>
-    <string name="menu_about">关于</string>
-    <string name="menu_set">设置</string>
+    <string name="menu_cycle">Pronóstico del Tiempo</string>
+    <string name="menu_detail">Más detalles</string>
+    <string name="menu_range">Tiempo local</string>
+    <string name="menu_new">Editar ubicación</string>
+    <string name="menu_reload">Recargar</string>
+    <string name="menu_report_on">Informes on</string>
+    <string name="menu_report_off">Informes off</string>
+    <string name="menu_sms">SMS</string>
+    <string name="menu_about">Acerca</string>
+    <string name="menu_set">Configuración</string>
 
-    <string name="send_weather_sms_cycle">%1$s未来天气：%2$s</string>
+    <string name="send_weather_sms_cycle">%s Pronóstico del tiempo: %s</string>
     <string name="send_weather_sms_main">%1$s %2$s,%3$s %4$s %5$s</string>
-    <string name="send_weather_sms_error">无相关天气信息</string>
+    <string name="send_weather_sms_error">No hay datos del tiempo para enviar</string>
 
-    <string name="tip_weather_help_on">开启%s天气提醒\n早上将会自动获得天气提示。</string>
-    <string name="tip_weather_help_off">关闭天气提醒</string>
+    <string name="tip_weather_help_on">Abrir %s recordatorios de tiempo se mostrará automáticamente.</string>
+    <string name="tip_weather_help_off">Cerrar recordatorios del clima</string>
 
-    <string name="tip_weather">MIUI天气提醒</string>
-    <string name="tip_weather_info_title_1">%1$s今天预计昼夜温差%2$d度</string>
-    <string name="tip_weather_info_content_1">外出注意加减衣服噢。</string>
-    <string name="tip_weather_info_title_2">%1$s今天预计有%2$s</string>
-    <string name="tip_weather_info_content_2">如果外出请注意噢。</string>
-    <string name="tip_weather_info_error">无相关数据</string>
+    <string name="tip_weather"Consejos >MIUI Weather</string>
+    <string name="tip_weather_info_title_1">%1$s la temperatura esperada para hoy en %2$d grados</string>
+    <string name="tip_weather_info_content_1">Contenido 1.</string>
+    <string name="tip_weather_info_title_2">%1$s Esperada para hoy %2$s</string>
+    <string name="tip_weather_info_content_2">Contenido 2.</string>
+    <string name="tip_weather_info_error">No hay datos</string>
 
-    <string name="report_send">转发</string>
-    <string name="report_exit">查看详情</string>
+    <string name="report_send">Enviar</string>
+    <string name="report_exit">Ver</string>
 
-    <string name="alert_provider_title">定位提醒</string>
-    <string name="alert_provider_message">为了检测位置，将启用无线网络定位。允许天气开启和使用您的位置吗？</string>
-    <string name="button_allow">允许</string>
-    <string name="button_not_allow">不允许</string>
+    <string name="alert_provider_title">Recordar</string>
+    <string name="alert_provider_message">Su localización permitirá el posicionamiento de la red inalámbrica. ¿Quiére que la app del clima encuentre su posición?</string>
+    <string name="button_allow">Permitir</string>
+    <string name="button_not_allow">Denegar</string>
 
     <array name="send_item">
-        <item>短信</item>
-        <item>邮件</item>
+        <item>SMS</item>
+        <item>E-Mail</item>
     </array>
 
     <array name="act_weather_main_listview_json_key">
@@ -182,29 +182,29 @@
     </array>
 
     <array name="weather_sms_content">
-        <item>适合锻炼和出游。记得做好防晒措施。</item>
-        <item>多云的天气。不会有雨水。</item>
-        <item>由于天气可能会有变化，不太建议长时间外出噢。</item>
-        <item>外出请注意车辆，如果开车请小心行驶:)</item>
-        <item>雨太大了，出门记得带上伞，雨鞋也最好穿上。</item>
-        <item>雨太大了，出门记得带上伞，雨鞋也最好穿上。</item>
-        <item>雨太大了，出门记得带上伞，雨鞋也最好穿上。</item>
-        <item>外出的话建议带上伞，小心淋雨噢！</item>
-        <item>外出的话建议带上伞，小心淋雨噢！</item>
-        <item>今天雨真大，出门记得带上伞，别淋湿感冒罗^^</item>
-        <item>今天雨不小，出门记得带上伞噢！</item>
-        <item>细雨纷纷，外出的话建议带上伞噢！</item>
-        <item>雨雪天气，建议还是带伞出门噢！天气寒冷注意多加衣物。</item>
-        <item>雪很大，出门记得戴上帽子和围巾噢！</item>
-        <item>今天会有雪，出门记得戴上帽子和围巾噢。</item>
-        <item>雪很大，出门记得戴上帽子和围巾噢！</item>
-        <item>雪不小，出门记得戴上帽子和围巾噢！</item>
-        <item>飞雪飘飘，出门记得戴上帽子和围巾噢！</item>
-        <item>风沙太强了，如果出门建议戴好帽子和口罩。</item>
-        <item>风沙很强，如果出门建议戴好帽子和口罩。</item>
-        <item>有风沙，如果出门建议戴好帽子和口罩。</item>
-        <item>有风沙，如果出门建议戴好帽子和口罩。</item>
-        <item>难得一见的冰雹天气，外出走路要小心！</item>
+        <item>"Hoy hace un día despejado."</item>
+        <item>"Hoy es un día nubloso."</item>
+        <item>Por las predicciones, no es un buen día para salir.</item>
+        <item>Hay niebla, tenga cuidado al conducir.</item>
+        <item>Se espera una fuerte lluvia, quédese en casa.</item>
+        <item>Se espera una muy fuerte lluvia, quédese en casa.</item>
+        <item>Fuertes truenos, quédese en interiores.</item>
+        <item>Lluvia y relámpagos, no es un buen día para salir!</item>
+        <item>"Tormentas, no salga de casa hasta que paren!."</item>
+        <item>"Lluvia, no olvide su paraguas!"</item>
+        <item>"Lluvia, no olvide su paraguas!"</item>
+        <item>"Llovizna, no olvide su paraguas!"</item>
+        <item>Hoy nieve, frio y humedad!</item>
+        <item>Ligera nibela para hoy.</item>
+        <item>Nieve moderada para hoy.</item>
+        <item>Nieve dispersa para hoy.</item>
+        <item>"Ventisca, abríguese si va a salir!"</item>
+        <item>Nevando, hora de hacer muñecos de nieve!</item>
+        <item>"Con niebla, no hay mucha visibilidad."</item>
+        <item>Fuertes tormentas de arena, no olvide cubrir su cara</item>
+        <item>Tormentas de arena, no olvide cubrir su cara.</item>
+        <item>Mucho polvo, no olvide cubrir su cara.</item>
+        <item>"Tormenta de granizo, no salga a la calle!"</item>
     </array>
 
     <array name="weather_sms_addons">
