--- a/src/packages/apps/FileExplorer/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/FileExplorer/res/values-zh-rCN/strings.xml
@@ -162,7 +162,7 @@
     <string name="wangpan_root_path">我的网盘</string>
     <string name="waiting_refresh">更新中，请稍后...</string>
     <string name="kuaipan_over_space">网盘空间已满</string>
-    <string name="kuaipan_tech_support">金山快盘提供技术支持</string>
+    <string name="kuaipan_tech_support">金山快盘提供云存储服务</string>
     <string name="no_tasks">任务列表为空</string>
 
     <string-array name="task_status">
