--- a/src/packages/apps/Mms/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/Mms/res/values-zh-rCN/strings.xml
@@ -510,8 +510,8 @@
     <string name="mx_activate_error_sim_change">SIM卡发生变化，需要重新启用网络短信</string>
     <string name="mx_activate_error_malformed_info">您的信息发生变化，需要重新启用网络短信</string>
     <string name="mx_activate_error_server">当前服务器繁忙，启用网络短信失败</string>
-    <string name="mx_activate_hint_sim_change">SIM卡发生变化，需要重新启用网络短信。是否现在启用？</string>
-    <string name="mx_activate_hint_malformed_info">您的信息发生变化，需要重新启用网络短信。是否现在启用？</string>
-    <string name="mx_activate_hint_server">请求被服务器拒绝，启用网络短信失败。是否重新启用？</string>
+    <string name="mx_activate_hint_sim_change">SIM卡发生变化，需要发送一条普通短信以启用网络短信。是否现在启用？</string>
+    <string name="mx_activate_hint_malformed_info">您的信息发生变化，需要发送一条普通短信以启用网络短信。是否现在启用？</string>
+    <string name="mx_activate_hint_server">请求被服务器拒绝，启用网络短信失败。需要发送一条普通短信以启用网络短信。是否重新启用？</string>
     <string name="need_download">等待同步...</string>
 </resources>
