--- a/src/packages/apps/Mms/res/values/strings.xml
+++ b/src/packages/apps/Mms/res/values/strings.xml
@@ -981,9 +981,9 @@
     <string name="mx_activate_error_sim_change">SIM card changed, reactivation of cloud message if required</string>
     <string name="mx_activate_error_malformed_info">Your personal info interrupted, reactivation of cloud message is required</string>
     <string name="mx_activate_error_server">Server refused to activate, failed to activate cloud message</string>
-    <string name="mx_activate_hint_sim_change">SIM card changed, reactivation of cloud message if required. Activate it now?</string>
-    <string name="mx_activate_hint_malformed_info">Your personal info interrupted, reactivation of cloud message is required. Activate it now?</string>
-    <string name="mx_activate_hint_server">Server refused to activate, failed to activate cloud message? Activate it now?</string>
+    <string name="mx_activate_hint_sim_change">SIM card changed. An SMS is required to reactivate cloud message. Activate it now?</string>
+    <string name="mx_activate_hint_malformed_info">Your personal info interrupted. An SMS is required to reactivate cloud message. Activate it now?</string>
+    <string name="mx_activate_hint_server">Server refused to activate, failed to activate cloud message? An SMS is required to reactivate cloud message. Activate it now?</string>
     <string name="need_download">Waiting for sync...</string>
 </resources>
 
