--- a/src/packages/apps/Backup/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/Backup/res/values-zh-rCN/strings.xml
@@ -237,8 +237,8 @@
     <string name="enable_encrypt_indicator">备份未设置加密，点击启用</string>
     <string name="enable_encrypt">立即启用</string>
     <string name="already_enable_encrypt">加密已启用</string>
-    <string name="enable_encrypt_summery1">系统依靠小米帐号为您的本地备份加密。\n数据清空后或使用其他手机恢复备份时，需要登录小米帐号</string>
-    <string name="enable_encrypt_summery2">今后新建的备份将自动加密。\n数据清空后或使用其他手机恢复备份时，需要您登录小米帐号</string>
+    <string name="enable_encrypt_summery1">系统依靠小米帐号为您的本地备份加密。\n恢复出厂设置后或使用其他手机恢复备份时，需要登录小米帐号</string>
+    <string name="enable_encrypt_summery2">今后新建的备份将自动加密。\n恢复出厂设置后或使用其他手机恢复备份时，需要您登录小米帐号</string>
     <string name="enable_encrypt_xiaomi_account">此备份是有小米帐号<xliff:g id="account" example="110000">%1$s</xliff:g>创建的，请删除当前登录帐号，\
 再登录<xliff:g id="account" example="110000">%2$s</xliff:g>以恢复数据</string>
     <string name="enable_encrypt_ok">知道了</string>
