--- a/src/packages/apps/Backup/res/values/strings.xml
+++ b/src/packages/apps/Backup/res/values/strings.xml
@@ -206,8 +206,8 @@
     <string name="enable_encrypt_indicator">Backup is not encrypted, click to enable.</string>
     <string name="enable_encrypt">Enable now</string>
     <string name="already_enable_encrypt">Encryption enabled</string>
-    <string name="enable_encrypt_summery1">System will encrypt your local backup based on Xiaomi account \n You need to log in Xiaomi account when emptying data or using other phone to restore the backup. </string>
-    <string name="enable_encrypt_summery2">The new backup will be automatically encrypted \n You need to log in Xiaomi account when emptying data or using other phone to restore the backup. </string>
+    <string name="enable_encrypt_summery1">System will encrypt your local backup based on Xiaomi account \n You need to log in Xiaomi account when factory reset or using other phone to restore the backup. </string>
+    <string name="enable_encrypt_summery2">The new backup will be automatically encrypted \n You need to log in Xiaomi account when factory reset or using other phone to restore the backup. </string>
     <string name="enable_encrypt_xiaomi_account">This backup was created by <xliff:g id="account" example="110000">%1$s</xliff:g>, please delete the current account, \
 and log in <xliff:g id="account" example="110000">%2$s</xliff:g> to restore the data.</string>
     <string name="enable_encrypt_ok">OK</string>
