--- a/src/packages/apps/MiuiHome/res/values/strings.xml
+++ b/src/packages/apps/MiuiHome/res/values/strings.xml
@@ -151,6 +151,7 @@
     <string name="default_folder_title_tools">Tools</string>
     <string name="default_folder_title_recommend">Recommend</string>
     <string name="default_folder_title_game">Games</string>
+    <string name="default_folder_title_security">Sceurity Center</string>
 
     <string name="preferences_title">Launcher Settings</string>
     <string name="preferences_general_title">General settings</string>
