--- a/src/packages/apps/MiuiHome/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/MiuiHome/res/values-zh-rCN/strings.xml
@@ -77,6 +77,7 @@
     <string name="default_folder_title_tools">系统工具</string>
     <string name="default_folder_title_recommend">推荐</string>
     <string name="default_folder_title_game">游戏</string>
+    <string name="default_folder_title_security">安全中心</string>
 
     <string name="preferences_title">桌面效果设置</string>
     <string name="preferences_general_title">一般设置</string>
